<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity"
    android:orientation="vertical"
    android:background="@color/colorDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/stat"
            android:layout_margin="5dp"
            android:background="@drawable/borderstat"
            android:text="@string/statistiques"
            android:textColor="@color/colorTxt"
            android:onClick="onClickStats"

            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/voiture"
            android:layout_margin="5dp"
            android:background="@drawable/bordervehicule"
            android:text="@string/vehicules"
            android:textColor="@color/colorTxt"
            android:onClick="onClickVehicule"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/client"
            android:layout_margin="5dp"
            android:background="@drawable/borderclients"
            android:text="@string/clients"
            android:textColor="@color/colorTxt"
            android:onClick="onClickClient"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:layout_weight="0.5"
            android:drawableTop="@drawable/liste"
            android:layout_margin="5dp"
            android:background="@drawable/borderlocation"
            android:text="@string/locations"
            android:textColor="@color/colorTxt"/>

    </LinearLayout>

</LinearLayout>